# Resource-Reserver

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .mise.toml  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE_VERIFICATION.md  CHANGELOG.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.ci  Dockerfile.dev  Dockerfile.frontend  ENHANCEMENT_PLAN.md  FRONTEND_MODERNIZATION.md  IMPLEMENTATION_PLAN.md  MIGRATION_CHECKLIST.md  Makefile  PROGRESS_TRACKER.md  PULL_REQUEST.md  PULL_REQUEST_NOTES.md  README.md  Tiltfile  alembic.ini  architecture.md  demo-resources.csv  dev  docker-compose.registry.yml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  resources.csv  ruff_errors.txt  (+5 more)
.githooks/: post-commit
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  e2e.yml
.moon/: toolchain.yml  workspace.yml
app/: analytics_service.py  approval_service.py  audit_service.py  auth.py  auth_routes.py  auth_schemas.py  availability_service.py  bulk_service.py  calendar_service.py  config.py  database.py  email_service.py  main.py  mfa.py  models.py  oauth2.py  rbac.py  schemas.py  search_service.py  services.py  setup.py  setup_routes.py  webhook_service.py  websocket.py
app/core/: __init__.py  cache.py  i18n.py  metrics.py  rate_limiter.py  versioning.py
app/routers/: analytics.py  audit.py  business_hours.py  calendar.py  notifications.py  quotas.py  resource_groups.py  search.py  webhooks.py
app/templates/email/: base.html  reservation_confirmation.html  resource_available.html
app/utils/: password.py  recurrence.py
apps/backend/: alembic.ini  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  analytics_service.py  auth.py  auth_routes.py  auth_schemas.py  availability_service.py  calendar_service.py  config.py  database.py  email_service.py  main.py  mfa.py  models.py  rbac.py  schemas.py  search_service.py  services.py  webhook_service.py  websocket.py
apps/backend/cli/: config.py  main.py  setup_commands.py  ui.py
apps/backend/migrations/: env.py
apps/backend/scripts/: migrate_auth.py  setup-dev.sh
apps/backend/tests/: conftest.py  test_analytics.py  test_approvals.py  test_auth_features.py  test_bulk.py  test_health_endpoints.py  test_i18n.py  test_labels.py  test_metrics.py  test_rate_limiter.py  test_resource_groups.py  test_search.py  test_versioning.py  test_webhooks.py  test_websocket.py
apps/frontend/: .eslintrc.json  moon.yml  next.config.mjs  package-lock.json  playwright.config.ts  postcss.config.mjs  vitest.config.ts
apps/frontend/e2e/: auth.spec.ts  global-setup.ts  reservations.spec.ts  resources.spec.ts  test-utils.ts  waitlist.spec.ts
apps/frontend/messages/: es.json
apps/frontend/public/: sw.js
apps/frontend/src/: i18n.ts  middleware.ts
cli/: __init__.py  auth_commands.py  client.py  config.py  main.py  utils.py
docs/: api-reference.md  auth-guide.md  deployment.md  development.md  index.md  one-command-complete.md  one-command-setup.md  quick-start.md  safari-login-fix.md  troubleshooting.md
docs/admin/: analytics.md  business-hours.md  roles.md  users.md
docs/api/: authentication.md  overview.md  reservations.md  resources.md  users.md  webhooks.md
docs/development/: architecture.md  contributing.md  deployment.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: calendar.md  dashboard.md  reservations.md  resources.md  waitlist.md
frontend/: package-lock.json  package.json  server.js
frontend-next/: .gitignore  bunfig.toml  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  vitest.config.ts
frontend-next/e2e/: auth.spec.ts  global-setup.ts  reservations.spec.ts  resources.spec.ts  waitlist.spec.ts
frontend-next/messages/: en.json  fr.json
frontend-next/public/: manifest.json  offline.html  sw.js
frontend-next/src/: i18n.ts  middleware.ts
frontend-next/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend-next/src/components/: AnalyticsDashboard.tsx  BusinessHoursEditor.tsx  CalendarExport.tsx  InstallPWA.tsx  LanguageSelector.tsx  LiveIndicator.tsx  NotificationBadge.tsx  NotificationCenter.tsx  NotificationItem.tsx  QuotaDisplay.tsx  RecurrenceSelector.tsx  RecurringBadge.tsx  ResourceGroupTree.tsx  ServiceWorkerRegistration.tsx  TimeSlotPicker.tsx  UserPreferences.tsx  WaitlistButton.tsx  WaitlistManager.tsx  WaitlistStatus.tsx  WebhookSettings.tsx  availability-dialog.tsx  client-only.tsx  create-resource-dialog.tsx  health-dialog.tsx  history-dialog.tsx  mfa-dialog.tsx  pagination.tsx  password-strength-meter.tsx  reservation-dialog.tsx  reservations-tab.tsx  resources-tab.tsx  theme-toggle.tsx  upload-csv-dialog.tsx
frontend/views/: dashboard.ejs  layout.ejs  login.ejs
migrations/: env.py
migrations/versions/: 20b26ba734e7_add_approval_workflow_models.py  d5407f13c497_add_saved_searches.py  d5e6f7a8b9c0_add_resource_groups.py
scripts/: dev.sh  migrate_auth.py  pre-push-ci.sh  setup-dev.sh
src/: AppController.ts  main.ts
src/api/: client.ts
src/components/: BaseComponent.ts  DashboardComponent.ts  LoginComponent.ts
src/services/: AuthService.ts  ReservationService.ts  ResourceService.ts  SystemService.ts
src/stores/: AppStore.ts
src/styles/: animations.css
src/types/: index.ts
src/utils/: dom.ts  formatting.ts  notifications.ts
tests/: conftest.py  test_audit.py  test_auth_endpoints.py  test_auth_features.py  test_cache.py  test_i18n.py  test_rate_limiter.py  test_websocket.py
tests/test_api/: test_auth.py  test_notifications.py  test_reservations.py  test_resources.py  test_waitlist.py
tests/test_cli/: conftest.py  test_auth_cli.py  test_reservations_cli.py  test_resources_cli.py  test_system_cli.py
tests/test_services/: test_recurrence.py  test_resource_service.py  test_user_service.py
web/: index.html
web/css/: style.css  styles.css
web/js/: script.js
web/scripts/: script.js
(+179 files in other folders)
